UNCID-745: Fixed "Create New List" popup on firefox.

--- a/src/scss/components/_contact-item.scss
+++ b/src/scss/components/_contact-item.scss
@@ -226,3 +226,11 @@
     line-height: 18px;
   }
 }
+
+@media (max-width: $screen-xs-max) {
+  #contact-modal--confirm {
+    .margin-bottom {
+      margin-bottom: 20px;
+    }
+  }
+}
